force-app/main/default/objects/BGR_Masterblaster__c/BGR_Masterblaster__c.object-meta.xml
<CustomObject>
    <label>BGR Masterblaster</label>
    <nameField>
        <label>BGR Masterblaster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BGR Masterblaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>