force-app/main/default/objects/BGR_Masterblaster__c/fields/ORIFICE__c.field-meta.xml
<CustomField>
    <fullName>ORIFICE__c</fullName>
    <label>ORIFICE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>