force-app/main/default/objects/BGR_Masterblaster__c/fields/SelectionOK__c.field-meta.xml
<CustomField>
    <fullName>SelectionOK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SelectionOK</label>
    <type>Checkbox</type>
</CustomField>