force-app/main/default/objects/BGR_Masterblaster__c/fields/SETTINGUL__c.field-meta.xml
<CustomField>
    <fullName>SETTINGUL__c</fullName>
    <label>SETTINGUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>