force-app/main/default/objects/BGR_Masterblaster__c/fields/SUPPLYPRESSURELL__c.field-meta.xml
<CustomField>
    <fullName>SUPPLYPRESSURELL__c</fullName>
    <label>SUPPLYPRESSURELL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>