force-app/main/default/objects/BGR_Masterblaster__c/fields/SUPPLYPRESSUREUL__c.field-meta.xml
<CustomField>
    <fullName>SUPPLYPRESSUREUL__c</fullName>
    <label>SUPPLYPRESSUREUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>